syntax = "proto3";
package io.fdb.record.grpc;

option java_package = "io.fdb.record.grpc";
option go_package = "io/fdb/grpc/protos";

import "fdb_crud.proto";
import "fdb_metadata_manager.proto";


message FDBStreamingSessionComand{
    int64 commandId = 1;
    string database = 2;
    FDBCrudCommand command = 8;
}

message FDBStreamingSessionResponse{
    int64 commandId = 1;
    FDBCrudResponse response = 8;
}

service FDBStreamingSession{
    rpc execute( stream FDBStreamingSessionComand) returns (stream FDBStreamingSessionResponse){}
}